# hawhhcalendarbot-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  readme.md
src/: config_managment.rs  json_parser.rs  main.rs  meal.rs  mensa_commands.rs  mensa_data.rs  tests.rs
src/cmd/: events.rs  mensa.rs  mensa_settings.rs  mod.rs
src/events/: event.rs  haw_event.rs  mod.rs  mup_scraper.rs  tests.rs
src/mensa/: haw_meal.rs  meal.rs  mensa_data.rs  mod.rs  test_meal.rs  tests.rs
test_data/mensadata/TestMensa/2025/06/: 01.json
test_data/mensadata/TestMensa/2025/W22/: SO.json
