[package]
name = "hawhhcalendarbot-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
clap = { version = "4.5.38", features = ["derive"] }
mockall = "0.13.1"
regex = "1.11.1"
rstest = "0.25.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
reqwest = {version = "0.12.19", features = ["blocking"]}
getset = "0.1.5"
tempfile = "3.20.0"
json = "0.12.4"
scraper = "0.23.1"
